cmake_minimum_required (VERSION 2.8)
set( APPNAME app )
if(CROSS_COMPILE)
  set(CMAKE_C_COMPILER ${CROSS_COMPILE}-gcc)
  set(CMAKE_CXX_COMPILER ${CROSS_COMPILE}-g++)
  set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
  set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
  set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
  set(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE ONLY)
endif()
project( ${APPNAME} )
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_definitions( "-Wall -g" )
endif()
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/stun)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/mqtt)

add_executable(p2p-server src/cp2p/server.c)
add_executable(p2p-client src/cp2p/client.c)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src SRCS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src/stun SRCS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src/mqtt SRCS)
add_executable(p2p ${SRCS})
target_link_libraries(p2p pthread)

list(APPEND SRCS src/servr.c src/client.c)

foreach(f IN LISTS  SRCS)
  get_filename_component(b ${f} NAME)
  set_source_files_properties(${f} PROPERTIES
    COMPILE_DEFINITIONS "__FILENAME__=\"${b}\"")
endforeach()
